<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".decorator.DecoratorActivity">
    <TextView
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/decorator_pizza_text"
        android:text="@string/choose_pizza"
        android:textSize="18sp"/>
    <LinearLayout
        android:id="@+id/decorator_pizza_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/decorator_marinara_button"
            android:text="@string/marinara"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/decorator_pepperoni_button"
            android:text="@string/pepperoni"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/decorator_cheese_button"
            android:text="@string/cheese"
            android:layout_weight="1"/>

    </LinearLayout>
    <TextView
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:textColor="@color/light_grey"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/decorator_extras_text"
        android:text="@string/please_choose_extras"
        android:textSize="18sp"/>
    <LinearLayout
        android:id="@+id/decorator_extras_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/decorator_olives_button"
            android:text="@string/olives"
            android:layout_weight="1"
            android:enabled="false"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/decorator_pear_button"
            android:text="@string/pear"
            android:layout_weight="1"
            android:enabled="false"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/decorator_extra_cheese_button"
            android:text="@string/ext_cheese"
            android:layout_weight="1"
            android:enabled="false"/>
    </LinearLayout>
    <Button
        android:layout_marginTop="36dp"
        android:text="@string/bake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/decorator_bake_button"
        android:layout_gravity="center"
        android:enabled="false"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/decorator_result_text"
        android:layout_marginTop="18dp"
        android:layout_gravity="center"
        tools:text="Plain pizza with nothing. Total weight: 1000g"/>
    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/decorator_clear_button"
            android:text="@string/clear"
            android:layout_weight="1"
            android:layout_gravity="center"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:src="@drawable/ic_home_black_24dp"
            android:id="@+id/decorator_home_button"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>